--- a/config.json
+++ b/config.json
@@ -2,10 +2,10 @@
     "host": "0.0.0.0",
     "port": 3000,
     "logpath": "logger.php",
-    "foodMass": 1,
-    "fireFood": 20,
+    "foodMass": 3,
+    "fireFood": 15,
     "limitSplit": 16,
-    "defaultPlayerMass": 10,
+    "defaultPlayerMass": 50,
 	"virus": {
     "fill": "#33ff33",
   	"stroke": "#19D119",
@@ -16,22 +16,22 @@
         },
 		"splitMass": 180
 	},
-    "gameWidth": 5000,
-    "gameHeight": 5000,
-    "adminPass": "DEFAULT",
+    "gameWidth": 2500,
+    "gameHeight": 2500,
+    "adminPass": "admin25",
     "gameMass": 20000,
-    "maxFood": 1000,
-    "maxVirus": 50,
+    "maxFood": 325,
+    "maxVirus": 20,
     "slowBase": 4.5,
-    "logChat": 0,
+    "logChat": 1,
     "networkUpdateFactor": 40,
-    "maxHeartbeatInterval": 5000,
+    "maxHeartbeatInterval": 300000,
     "foodUniformDisposition": true,
     "virusUniformDisposition": false,
     "newPlayerInitialPosition": "farthest",
-    "massLossRate": 1,
+    "massLossRate": 2,
     "minMassLoss": 50,
-    "mergeTimer": 15,
+    "mergeTimer": 25,
     "sqlinfo":{
       "connectionLimit": 100,
       "host": "DEFAULT",
