--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
 	},
     "gameWidth": 3200,
     "gameHeight": 3200,
-    "adminPass": "admin25",
+    "adminPass": "lelenny",
     "gameMass": 20000,
     "maxFood": 335,
     "maxVirus": 20,
