--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
 	},
     "gameWidth": 3000,
     "gameHeight": 3000,
-    "adminPass": "lelenny",
+    "adminPass": "89BraidenFyet",
     "gameMass": 20000,
     "maxFood": 335,
     "maxVirus": 0,
