--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
 	},
     "gameWidth": 8500,
     "gameHeight": 8500,
-    "adminPass": "*@A)"k>=Q_MN;JWPr4ewh/b;?v]b=."@",
+    "adminPass": "pDR5wQyGmmt4H6tA4ZABcMN9f3hRmrCt",
     "gameMass": 20000,
     "maxFood": 1700,
     "maxVirus": 0,
