--- a/config.json
+++ b/config.json
@@ -21,13 +21,13 @@
     "adminPass": "pDR5wQyGmmt4H6tA4ZABcMN9f3hRmrCt",
     "gameMass": 20000,
     "maxFood": 4750,
-    "maxVirus": 50,
+    "maxVirus": 75,
     "slowBase": 4.5,
     "logChat": 1,
     "networkUpdateFactor": 40,
     "maxHeartbeatInterval": 300000,
     "foodUniformDisposition": true,
-    "virusUniformDisposition": false,
+    "virusUniformDisposition": true,
     "newPlayerInitialPosition": "farthest",
     "massLossRate": 1,
     "minMassLoss": 50,
