--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
 	},
     "gameWidth": 14000,
     "gameHeight": 14000,
-    "adminPass": "pDR5wQyGmmt4H6tA4ZABcMN9f3hRmrCt",
+    "adminPass": "niggercAnnon2318312731",
     "gameMass": 20000,
     "maxFood": 4750,
     "maxVirus": 65,
