--- a/config.json
+++ b/config.json
@@ -16,18 +16,18 @@
         },
 		"splitMass": 90001
 	},
-    "gameWidth": 10000,
-    "gameHeight": 10000,
+    "gameWidth": 9000,
+    "gameHeight": 9000,
     "adminPass": "niggercAnnon2318312731",
     "gameMass": 20000,
-    "maxFood": 5500,
-    "maxVirus": 65,
+    "maxFood": 4700,
+    "maxVirus": 0,
     "slowBase": 4.5,
     "logChat": 1,
     "networkUpdateFactor": 40,
     "maxHeartbeatInterval": 300000,
     "foodUniformDisposition": true,
-    "virusUniformDisposition": true,
+    "virusUniformDisposition": false,
     "newPlayerInitialPosition": "farthest",
     "massLossRate": 1,
     "minMassLoss": 50,
