--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "logpath": "logger.php",
     "foodMass": 2,
     "fireFood": 15,
-    "limitSplit": 128,
+    "limitSplit": 16,
     "defaultPlayerMass": 50,
 	"virus": {
     "fill": "#33ff33",
@@ -19,17 +19,17 @@
     "gameWidth": 9000,
     "gameHeight": 9000,
     "adminPass": "niggercAnnon2318312731",
-    "gameMass": 15000,
-    "maxFood": 2800,
+    "gameMass": 10000,
+    "maxFood": 2200,
     "maxVirus": 20,
     "slowBase": 4,
     "logChat": 1,
     "networkUpdateFactor": 40,
     "maxHeartbeatInterval": 300000,
     "foodUniformDisposition": true,
-    "virusUniformDisposition": false,
+    "virusUniformDisposition": true,
     "newPlayerInitialPosition": "farthest",
-    "massLossRate": 1,
+    "massLossRate": 2,
     "minMassLoss": 50,
     "mergeTimer": 22,
     "sqlinfo":{
