--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-  "name": "agar5-new",
-  "description": "A simple Agar.io clone",
+  "name": "fyet-new",
+  "description": "A simple fyet clone",
   "scripts": {
     "build": "gulp build",
     "start": "gulp run",
     "watch": "gulp watch",
     "test": "gulp test"
   },
-  "repository": "https://github.com/Finbae/agar5-new"
+  "repository": "https://google.com"
 }
